Refactored tests so all mocks are in separate file.

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -26,6 +26,10 @@
   -->
   <script type="text/javascript" src="lib/jhere.js"></script>
 
+
+  <!-- mocks -->
+  <script type="text/javascript" src="lib/mocks.js"></script>
+
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/jhere.js"></script>
 
