--- a/web/index.html
+++ b/web/index.html
@@ -72,19 +72,37 @@
         </header>
         <section>
             <p>
-                The examples (not screenshots!) below give an overview of what jHERE can do.
+                The examples below give an overview of what jHERE can do.
                 <a href="js/demos.js" title="Demo code">The code</a> is so simple that it needs no explanation!
                 Experiment with jHERE in <a href="http://bin.jhere.net">the playground</a>!
             </p>
         </section>
         <section class="demos">
             <ul>
-                <li class="simple" title="Simple map, simple interaction, centered in New York [http://bin.jhere.net/4066840]"><span>Simple Map</span></li>
-                <li class="satellite" title="Simple map, simple interaction, satellite view, contextual menu on right click [http://bin.jhere.net/4066844]"><span>Satellite</span></li>
-                <li class="marker" title="Map with a custom marker. Clicking on the marker fires an event. [http://bin.jhere.net/4066852]"><span>Marker</span></li>
-                <li class="bubble" title="Map with a non-closable info bubble [http://bin.jhere.net/4066864]"><span>Bubble</span></li>
-                <li class="kml" title="Map showing a KML file. Interaction is disabled. [http://bin.jhere.net/4066908]"><span>KML</span></li>
-                <li class="heatmap" title="Heatmap dataviz. Interaction is disabled. [http://bin.jhere.net/4066929]"><span>Heatmap</span></li>
+                <li class="simple" title="Simple map, simple interaction, centered in New York">
+                    <span>Simple Map</span>
+                    <a class="playground" href="http://bin.jhere.net/4066840" target="_blank"></a>
+                </li>
+                <li class="satellite" title="Simple map, simple interaction, satellite view, contextual menu on right click.">
+                    <span>Satellite</span>
+                    <a class="playground" href="http://bin.jhere.net/4066844" target="_blank"></a>
+                </li>
+                <li class="marker" title="Map with a custom marker. Clicking on the marker fires an event.">
+                    <span>Marker</span>
+                    <a class="playground" href="http://bin.jhere.net/4066852" target="_blank"></a>
+                </li>
+                <li class="bubble" title="Map with a non-closable info bubble">
+                    <span>Bubble</span>
+                    <a class="playground" href="http://bin.jhere.net/4066864" target="_blank"></a>
+                </li>
+                <li class="kml" title="Map showing a KML file. Interaction is disabled.">
+                    <span>KML</span>
+                    <a class="playground" href="http://bin.jhere.net/4066908" target="_blank"></a>
+                </li>
+                <li class="heatmap" title="Heatmap dataviz. Interaction is disabled.">
+                    <span>Heatmap</span>
+                    <a class="playground" href="http://bin.jhere.net/4066929" target="_blank"></a>
+                </li>
             </ul>
         </section>
     </section>
@@ -98,15 +116,32 @@
                 jHERE supports extensions, and a couple of them are <a href="https://github.com/mmarcon/jhere/blob/master/EXTENSIONS.md" title="jHERE extensions">already available on Github</a>. It is possible to <a href="http://custom.jhere.net" title="Make a custom build of jHERE">create a custom build</a> of jHERE that includes all the necessary componenents minified and concatenated in a single file.
             </p>
         </section>
+        <section class="demos">
+            <ul>
+                <li class="geocoding" title="Simple map, simple interaction, centered in New York">
+                    <span>Geocoding</span>
+                    <a class="playground" href="http://bin.jhere.net/4066840" target="_blank"></a>
+                </li>
+                <li class="routing" title="Simple map, simple interaction, satellite view, contextual menu on right click.">
+                    <span>Routing</span>
+                    <a class="playground" href="http://bin.jhere.net/4066844" target="_blank"></a>
+                </li>
+                <li class="shapes" title="Map with a custom marker. Clicking on the marker fires an event.">
+                    <span>Shapes</span>
+                    <a class="playground" href="http://bin.jhere.net/4066852" target="_blank"></a>
+                </li>
+            </ul>
+        </section>
     </section>
 
     <!--
     <a href="http://thenounproject.com/noun/fork/#icon-No5005" target="_blank">Fork</a> designed by <a href="http://thenounproject.com/DmitryBaranovskiy" target="_blank">Dmitry Baranovskiy</a> from The Noun Project
+    <a href="http://thenounproject.com/noun/console/#icon-No8571" target="_blank">Console</a> designed by <a href="http://thenounproject.com/Templarian" target="_blank">Austin Andrews</a> from The Noun Project
 
     -->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/jhere.js"></script>
+    <script src="js/jhere-custom.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
