--- a/web/index.html
+++ b/web/index.html
@@ -44,6 +44,7 @@
             <ul>
                 <li><a href="/" class="active">jHERE</a></li>
                 <li><a href="/docs.html">Docs</a></li>
+                <li><a href="/extensions.html">Extensions</a></li>
                 <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
@@ -113,7 +114,18 @@
         </header>
         <section>
             <p>
-                jHERE supports extensions, and a couple of them are <a href="https://github.com/mmarcon/jhere/blob/master/EXTENSIONS.md" title="jHERE extensions">already available on Github</a>. It is possible to <a href="http://custom.jhere.net" title="Make a custom build of jHERE">create a custom build</a> of jHERE that includes all the necessary componenents minified and concatenated in a single file.
+                In order to keep jHERE as small as possible, the plugin contains only a subset of all
+                the functionalities that are available via the HERE Maps API.
+            </p>
+            <p>
+                Everything else is available via extensions. A few of them are <a href="https://github.com/mmarcon/jhere/blob/master/EXTENSIONS.md" title="jHERE extensions">already available on Github</a>.
+            </p>
+            <p>
+                <strong>Geocoding</strong>, <strong>routing</strong>, <strong>shapes</strong> are just a few examples
+                of what can be done with extensions.
+            </p>
+            <p>
+                It is possible to <a href="http://custom.jhere.net" title="Make a custom build of jHERE">create a custom build</a> of jHERE that includes all the official extensions you need minified and concatenated in a single file.
             </p>
         </section>
         <section class="demos">
