--- a/web/index.html
+++ b/web/index.html
@@ -146,6 +146,16 @@
         </section>
     </section>
 
+    <footer>
+        <ul class="links">
+            <li><a href="">Docs</a></li>
+            <li><a href="">Extensions</a></li>
+            <li><a href="">About Me</a></li>
+            <li><a href="">Feedback</a></li>
+        </ul>
+        <small>Massimiliano Marcon &copy; 2012-13</small>
+    </footer>
+
     <!--
     <a href="http://thenounproject.com/noun/fork/#icon-No5005" target="_blank">Fork</a> designed by <a href="http://thenounproject.com/DmitryBaranovskiy" target="_blank">Dmitry Baranovskiy</a> from The Noun Project
     <a href="http://thenounproject.com/noun/console/#icon-No8571" target="_blank">Console</a> designed by <a href="http://thenounproject.com/Templarian" target="_blank">Austin Andrews</a> from The Noun Project
