Added about page.
Also, to make everything more playful, added zoom + zoom - controls
for the header map.

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>jHERE - Maps Made Easy</title>
+    <meta name="viewport" content="width=device-width" id="viewport">
     <link href='http://fonts.googleapis.com/css?family=Copse|Oswald|Syncopate|Titillium+Web:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="apple-touch-icon-precomposed" sizes="57x57"href="icon.png" />
@@ -30,7 +31,7 @@
 
 <body>
 
-    <header>
+    <header class="home">
         <div id="map"></div>
         <div class="title">
             <h1>jHERE</h1>
@@ -159,7 +160,7 @@
     <!--
     <a href="http://thenounproject.com/noun/fork/#icon-No5005" target="_blank">Fork</a> designed by <a href="http://thenounproject.com/DmitryBaranovskiy" target="_blank">Dmitry Baranovskiy</a> from The Noun Project
     <a href="http://thenounproject.com/noun/console/#icon-No8571" target="_blank">Console</a> designed by <a href="http://thenounproject.com/Templarian" target="_blank">Austin Andrews</a> from The Noun Project
-
+    <a href="http://thenounproject.com/noun/zoom/#icon-No4656" target="_blank">Zoom</a> designed by <a href="http://thenounproject.com/iconify" target="_blank">Scott Lewis</a> from The Noun Project
     -->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
