Final-ish version of new website.
Updated some links in documentation.
Updated default credentials in geocode example.

Added social network links in website.

--- a/src/examples/example.geocode.html
+++ b/src/examples/example.geocode.html
@@ -23,7 +23,7 @@
 <script type="text/javascript">
 $(window).on('load', function(){
     //Set default credentials
-    $.jHERE.defaultCredentials('_peU-uCkp-j8ovkzFGNU', 'gBoUkAMoxoqIWfxWA5DuMQ');
+    $.jHERE.defaultCredentials('69Dgg78qt4obQKxVbRA8', 'Nz7ilIB_v1CRwPXxgPdvuA');
     $.jHERE.geocode('Berlin, Germany').done(function(center){
         $('#map').jHERE({enable: ['behavior', 'zoombar', 'typeselector', 'positioning', 'contextmenu'], center: center});
     });
