--- a/web/about.html
+++ b/web/about.html
@@ -38,8 +38,8 @@
             <h1>jHERE</h1>
             <h2>Maps made easy.</h2>
             <div class="get">
-                <a href="#" class="download"><span></span>Download jHERE</a>
-                <a href="#" class="fork"><span></span>Fork on Github</a>
+                <a href="https://github.com/mmarcon/jhere/archive/master.zip" class="download"><span></span>Download jHERE</a>
+                <a href="https://github.com/mmarcon/jhere" class="fork"><span></span>Fork on Github</a>
             </div>
         </div>
         <nav>
