Minor fix in text for demos.

--- a/web/index.html
+++ b/web/index.html
@@ -75,8 +75,7 @@
         <section>
             <p>
                 The examples below give an overview of what jHERE can do.
-                <a href="js/demos.js" title="Demo code">The code</a> is so simple that it needs no explanation!
-                Experiment with jHERE in <a href="http://bin.jhere.net">the playground</a>!
+                Experiment with jHERE in <a href="http://bin.jhere.net">the playground</a>: the code is so simple that it needs no explanation.
             </p>
         </section>
         <section class="demos">
@@ -99,7 +98,7 @@
                 </li>
                 <li class="kml" title="Map showing a KML file. Interaction is disabled.">
                     <span>KML</span>
-                    <a class="playground" href="http://bin.jhere.net/4066908" target="_blank"></a>
+                    <a class="playground" href="http://bin.jhere.net/5128075" target="_blank"></a>
                 </li>
                 <li class="heatmap" title="Heatmap dataviz. Interaction is disabled.">
                     <span>Heatmap</span>
