--- a/about.html
+++ b/about.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>jHERE - Maps Made Easy</title>
-    <link href='http://fonts.googleapis.com/css?family=Copse|Oswald' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <meta name="viewport" content="width=device-width" id="viewport">
+    <link href='http://fonts.googleapis.com/css?family=Copse|Oswald|Syncopate|Titillium+Web:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57"href="icon.png" />
+
+    <meta property="og:title" content="jHERE - Maps Made Easy"/>
+    <meta property="og:url" content="http://jhere.net"/>
+    <meta property="og:site_name" content="jHERE"/>
+    <meta property="og:image" content="http://jhere.net/icon.png"/>
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -18,57 +24,70 @@
         (function() {
             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
     </script>
 </head>
 
 <body>
-    <div class="ribbon"></div>
-    <div class="container">
 
-        <header>
-            <div class="logo"><img src="images/logo-white.png" alt="jHERE logo"/></div>
+    <header class="page">
+        <div class="overlay"></div>
+        <div id="map"></div>
+        <div class="title">
             <h1>jHERE</h1>
             <h2>Maps made easy.</h2>
-        </header>
-
-        <div class="about">
-            <section id="map"></section>
-            <nav>
-                <ul>
-                    <li><a href="/">jHERE</a></li>
-                    <li><a href="/docs.html">Docs</a></li>
-                    <li><a href="/about.html" class="active">About</a></li>
-                    <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://jhere.net" data-text="jHERE - Maps made easy:" data-via="mmarcon" data-related="mmarcon" data-hashtags="jHERE">Tweet</a></li>
-                    <li class="twitter-follow"><a href="https://twitter.com/mmarcon" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @mmarcon</a></li>
-                    <li class="facebook"><div class="fb-like" data-href="http://jhere.net" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-font="lucida grande"></div></li>
-                </ul>
-            </nav>
-            <section>
-                <img src="http://gravatar.com/avatar/51298837eff1b7f3082bfb8108600573?s=200" alt="Massimiliano Marcon" class="gravatar" width="200" height="200"/>
-                <p>
-                    I am a software engineer, web dev and JavaScript geek. I work with many other
-                    clever people on <a href="http://here.net">HERE</a>, in Berlin. Coding is my job as well as my favourite hobby. You can find almost everything I work on by looking at my <a href="https://github.com/mmarcon" title="mmarcon on Github">Github profile</a> or <a href="http://blog.marcon.me">my blog</a>.
-                </p>
-                <p>
-                    If you want to leave some feedback about jHERE, feel free to just email me at
-                    <a class="email" href="">max at jhere dot net</a>. Any feedback is good, really. And if you want to contribute, just <a href="https://github.com/mmarcon/jhere">fork the project</a> and submit a pull request.
-                </p>
-                <p>
-                    Note that even though I work for Nokia on HERE, jHERE is a project that I developed in my personal time and it is <strong>not related to or supported by Nokia or HERE</strong> in any way.
-                </p>
-            </section>
+            <div class="get">
+                <a href="https://github.com/mmarcon/jhere/archive/master.zip" class="download"><span></span>Download jHERE</a>
+                <a href="https://github.com/mmarcon/jhere" class="fork"><span></span>Fork on Github</a>
+            </div>
         </div>
-    </div>
+        <nav>
+            <ul>
+                <li><a href="/" class="active">jHERE</a></li>
+                <li><a href="/docs.html">Docs</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="main" class="content">
+        <section>
+            <img src="http://gravatar.com/avatar/51298837eff1b7f3082bfb8108600573?s=200" alt="Massimiliano Marcon" class="gravatar" width="200" height="200"/>
+            <p>
+                I am a software engineer, web dev and JavaScript geek. I work with many other
+                clever people on <a href="http://here.com">HERE</a>, in Berlin. Coding is my job as well as my favourite hobby. You can find almost everything I work on by looking at my <a href="https://github.com/mmarcon" title="mmarcon on Github">Github profile</a> or <a href="http://blog.marcon.me">my blog</a>.
+            </p>
+            <p>
+                If you want to leave some feedback about jHERE, feel free to just email me at
+                <a class="email" href="">max at jhere dot net</a>. Any feedback is good, really. And if you want to contribute, just <a href="https://github.com/mmarcon/jhere">fork the project</a> and submit a pull request.
+            </p>
+            <p>
+                Note that even though I work for Nokia on HERE, jHERE is a project that I developed in my personal time and it is <strong>not related to or supported by Nokia or HERE</strong> in any way.
+            </p>
+        </section>
+    </section>
 
     <footer>
-        <small>Massimiliano Marcon &copy; 2012</small>
+        <ul class="social">
+            <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://jhere.net" data-text="jHERE - Maps made easy:" data-via="mmarcon" data-related="mmarcon" data-hashtags="jHERE">Tweet</a></li>
+            <li class="twitter-follow"><a href="https://twitter.com/mmarcon" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @mmarcon</a></li>
+            <li class="facebook"><div class="fb-like" data-href="http://jhere.net" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-font="lucida grande"></div></li>
+        </ul>
+
+        <small>Massimiliano Marcon &copy; 2012-13</small>
     </footer>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jhere.js"></script>
-    <script type="text/javascript" src="js/main.js?v2"></script>
+    <!--
+    <a href="http://thenounproject.com/noun/fork/#icon-No5005" target="_blank">Fork</a> designed by <a href="http://thenounproject.com/DmitryBaranovskiy" target="_blank">Dmitry Baranovskiy</a> from The Noun Project
+    <a href="http://thenounproject.com/noun/console/#icon-No8571" target="_blank">Console</a> designed by <a href="http://thenounproject.com/Templarian" target="_blank">Austin Andrews</a> from The Noun Project
+
+    -->
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/jhere-custom.js"></script>
+    <script src="js/main.js"></script>
+
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
