Added documentation for Tire.js compatibility

--- a/src/examples/example.tire.html
+++ b/src/examples/example.tire.html
@@ -17,9 +17,8 @@
 
 <body>
 <div id="map"></div>
-<script type="text/javascript" src="http://lab.marcon.me/jhere/tire.js"></script>
+<script type="text/javascript" src="http://code.tirejs.com/dist/all/tire-1.1.1.js"></script>
 <script type="text/javascript" src="../tire.adapter.js"></script>
-<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 <script type="text/javascript" src="../jhere.js"></script>
 <script type="text/javascript">
 var heatMapData = [
