--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
         <section>
             <p>
             <strong>Maps are cool</strong>, but map APIs are complicated. jHERE solves this problem
-            by offering a simple but powerful map API in the form of a <strong>jQuery (or Zepto.JS) plugin</strong>.
+            by offering a simple but powerful map API in the form of a <strong><a href="http://jquery.com/">jQuery</a> (or <a href="http://zeptojs.com/">Zepto.JS</a>, or <a href="http://tirejs.com/">Tire</a>) plugin</strong>.
             </p>
             <p class="download-link"><a href="https://github.com/mmarcon/jhere/archive/master.zip" class="download">Download jHERE</a> and start making beautiful maps now!</p>
             <p>
