--- a/web/docs.html
+++ b/web/docs.html
@@ -2,7 +2,7 @@
 
 <p>Using jHERE in your websites and applications is really easy.</p>
 
-<p>Include either jQuery or Zepto.JS at the end of your page</p>
+<p>Include either jQuery, Zepto.JS or Tire.js at the end of your page</p>
 
 <p><code>&lt;script type="text/javascript" src="js/jquery.min.js"&gt;&lt;/script&gt;</code></p>
 
@@ -10,12 +10,23 @@
 
 <p><code>&lt;script type="text/javascript" src="js/zepto.min.js"&gt;&lt;/script&gt;</code></p>
 
+<p>or</p>
+
+<p><code>&lt;script type="text/javascript" src="js/tire.min.js"&gt;&lt;/script&gt;</code></p>
+
 <p><a href="https://github.com/mmarcon/jhere/archive/master.zip">Download</a> the plugin code, copy it in your project folder and
-add the necessary script tags below jQuery or Zepto.JS. <strong>If you are using Zepto.JS</strong>
+add the necessary script tags after jQuery, Zepto.JS or Tire.js. <strong>If you are using Zepto.JS</strong>
 then you will need to <strong>include the Zepto adapter</strong> before including the plugin.</p>
 
 <pre><code>&lt;script type="text/javascript" src="js/zepto.adapter.js"&gt;
 &lt;!--Only when using Zepto--&gt;
+&lt;/script&gt;</code></pre>
+
+<p><strong>If you are using Tire.js</strong>
+then you will need to <strong>include the Tire adapter</strong> before including the plugin.</p>
+
+<pre><code>&lt;script type="text/javascript" src="js/tire.adapter.js"&gt;
+&lt;!--Only when using Tire--&gt;
 &lt;/script&gt;</code></pre>
 
 <p><code>&lt;script type="text/javascript" src="js/jhere.js"&gt;&lt;/script&gt;</code>
@@ -24,7 +35,7 @@ And you are done.</p>
 <p>Make sure the DOM element that will contain the map has the appropriate
 size via CSS, e.g. by setting width and height.</p>
 
-<p><strong>Note that jHERE requires Zepto.JS or jQuery > 1.7.</strong></p>                 </div>                                               <div id="section-3">                     <h3>Make a map</h3>
+<p><strong>Note that jHERE requires Zepto.JS, jQuery > 1.7 or Tire.js >= 1.1.1</strong></p>                 </div>                                               <div id="section-3">                     <h3>Make a map</h3>
 
 <p><code>$('.selector').jHERE(options);</code></p>
 
