--- a/src/examples/example.tire.html
+++ b/src/examples/example.tire.html
@@ -287,7 +287,7 @@ $(window).on('load', function(){
         click: function(e){
             $(this).jHERE('bubble', [52.49, 13.39], {content: JSON.stringify(e.geo), closable: false});
         }}).jHERE('heatmap', heatMapData, 'value');
-     $('#map').jHERE('kml', 'resources/berlin.kml', true);
+     $('#map').jHERE('kml', 'resources/berlin.kml', true).jHERE('marker', {latitude: 52.5113748680947, longitude: 13.401589126700173}, {icon: 'resources/balloon.png', anchor: {x: 24, y: 48}});
     });
 </script>
 </body>
