--- a/src/examples/example.basic.html
+++ b/src/examples/example.basic.html
@@ -287,6 +287,9 @@ $(window).on('load', function(){
         }}).jHERE('marker', [52.49, 13.39], {text: '❤', textColor: '#fff', fill: '#004C9A',
         click: function(e){
             $(this).jHERE('bubble', [52.49, 13.39], {content: JSON.stringify(e.geo), closable: false});
+        }}).jHERE('marker', {latitude: 52.50170519640143, longitude: 13.433858032226539}, {text: 'Ï', textColor: '#fff', fill: '#004C9A',
+        click: function(e){
+            $(this).jHERE('bubble', e.geo, {content: JSON.stringify(e.geo), closable: false});
         }}).jHERE('heatmap', heatMapData, 'value').jHERE('marker', {latitude: 52.5113748680947, longitude: 13.401589126700173}, {icon: 'resources/balloon.png', anchor: {x: 24, y: 48}});
      $('#map').jHERE('kml', 'resources/berlin.kml', true).on('mapclick', function(e){
         console.log('clicked on: ', e.geo);
