--- a/src/examples/example.shapes.html
+++ b/src/examples/example.shapes.html
@@ -12,10 +12,24 @@
             right: 0;
             background: white;
         }
+
+        .clearbutton {
+            position: absolute;
+            top: 5px;
+            left: 5px;
+            background: #222;
+            color: #fff;
+            z-index: 1000;
+            font-family: 'Helvetica', sans-serif;
+            padding: 10px;
+            border-radius: 3px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
+<div class="clearbutton">Clear all shapes</div>
 <div id="map"></div>
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js"></script>
@@ -48,6 +62,9 @@ $(window).on('load', function(){
                     thickness: 1,
                     stroke: '#111'
                 }});
+    $('.clearbutton').on('click', function(){
+        map.jHERE('clearShapes');
+    });
 });
 </script>
 </body>
