Updated credential in examples as the old ones where no longer working.

--- a/src/examples/example.geocode.html
+++ b/src/examples/example.geocode.html
@@ -23,7 +23,7 @@
 <script type="text/javascript">
 $(window).on('load', function(){
     //Set default credentials
-    $.jHERE.defaultCredentials('69Dgg78qt4obQKxVbRA8', 'Nz7ilIB_v1CRwPXxgPdvuA');
+    $.jHERE.defaultCredentials('1220G0MOv2PBLjLq6tex', '0MM0Lr7hPyqfv3GiPmBOyg');
     $.jHERE.geocode('Berlin, Germany').done(function(center){
         $('#map').jHERE({enable: ['behavior', 'zoombar', 'typeselector', 'positioning', 'contextmenu'], center: center});
     });
