--- a/src/examples/example.getters.html
+++ b/src/examples/example.getters.html
@@ -59,7 +59,7 @@
 $(window).on('load', function(){
     var map = $('#map');
     //Set default credentials
-    $.jHERE.defaultCredentials('_peU-uCkp-j8ovkzFGNU', 'gBoUkAMoxoqIWfxWA5DuMQ');
+    $.jHERE.defaultCredentials('1220G0MOv2PBLjLq6tex', '0MM0Lr7hPyqfv3GiPmBOyg');
     map.jHERE({center: {latitude: 52.49, longitude: 13.39}, enable: ['behavior', 'zoombar']});
 
     //At this point the map is not yet initialized, so this should console.log
