--- a/src/examples/example.tire.html
+++ b/src/examples/example.tire.html
@@ -277,7 +277,7 @@ var heatMapData = [
 <script type="text/javascript">
 $(window).on('load', function(){
     //Set default credentials
-    $.jHERE.defaultCredentials('_peU-uCkp-j8ovkzFGNU', 'gBoUkAMoxoqIWfxWA5DuMQ');
+    $.jHERE.defaultCredentials('1220G0MOv2PBLjLq6tex', '0MM0Lr7hPyqfv3GiPmBOyg');
 
     $('#map').jHERE({enable: ['behavior', 'zoombar', 'typeselector', 'positioning', 'contextmenu']});
     $('#map').jHERE('type', 'smart').jHERE('marker', [52.49, 13.37], {text: '●', textColor: '#fff', fill: '#004C9A',
