--- a/src/examples/example.clustering.html
+++ b/src/examples/example.clustering.html
@@ -4191,7 +4191,7 @@ var data = [
 <script type="text/javascript">
 $(window).on('load', function(){
     //Set default credentials
-    $.jHERE.defaultCredentials('_peU-uCkp-j8ovkzFGNU', 'gBoUkAMoxoqIWfxWA5DuMQ');
+    $.jHERE.defaultCredentials('1220G0MOv2PBLjLq6tex', '0MM0Lr7hPyqfv3GiPmBOyg');
 
     $('#map').jHERE({enable: ['behavior'], center: [52.51, 13.4], zoom: 4});
     $('#map').jHERE('cluster', data);
