--- a/src/examples/example.shapes.html
+++ b/src/examples/example.shapes.html
@@ -42,7 +42,7 @@
 $(window).on('load', function(){
     var map = $('#map');
     //Set default credentials
-    $.jHERE.defaultCredentials('_peU-uCkp-j8ovkzFGNU', 'gBoUkAMoxoqIWfxWA5DuMQ');
+    $.jHERE.defaultCredentials('1220G0MOv2PBLjLq6tex', '0MM0Lr7hPyqfv3GiPmBOyg');
 
     map.jHERE({enable: ['behavior', 'zoombar'], type: 'smart', center: [52.5, 13.3], zoom: 11});
     map.jHERE('rectangle', {topLeft: [52.6, 13.2], bottomRight: [52.457, 13.48], style: {fill: '#ccc5'}});
