added functionality to zoom to markers
e.g. show all markers by recentering
or show all markers but zooming out
and keeping the current center

--- a/src/examples/example.markers.html
+++ b/src/examples/example.markers.html
@@ -85,6 +85,7 @@
         $('li').on('click', function(e){
             $('#map').jHERE('markergroups', $(this).data('group'), !$(this).hasClass('active'));
             $(this).toggleClass('active');
+            $('#map').jHERE('zoomToMarkers');
         });
     });
 </script>
