--- a/src/examples2/index.html
+++ b/src/examples2/index.html
@@ -17,6 +17,6 @@
 
 <body>
 
-<script src="../../out/jhere.min.js" class="test"></script>
+<script src="../../out/jhere.js" class="test"></script>
 </body>
 </html>
