Everything needed to finally show a map

--- a/src/examples2/index.html
+++ b/src/examples2/index.html
@@ -16,7 +16,10 @@
 </head>
 
 <body>
-
+<div id="map"></div>
 <script src="../../out/jhere.js" class="test"></script>
+<script>
+    var jHERE = new jHERE(document.querySelector('#map'), {zoom: 14});
+</script>
 </body>
 </html>
